--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Title
-title: [Pattern Recognition and Deep Learning (PRDL) Reading Group]
+title: [PRDL Reading Group]
 description: [Reading Group for discussing and disseminating state-of-the-art papers in Deep Learning,  Pattern Recognition and Computer Vision]
