--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ plugins:
 
 # Title
 title: [PRDL Reading Group]
-description: [Reading Group for discussing and disseminating state-of-the-art papers in Deep Learning,  Pattern Recognition and Computer Vision]
+description: [Reading Group for discussing and disseminating state-of-the-art papers in Pattern Recognition and Deep Learning]
